--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <label><textarea name="inv" id="inventarioTxt" cols="38" rows="10" placeholder="Inventario"></textarea></label>
         </div>
 
-        <script src="./script/script.js"></script>
+        <script src="./Front-end/script/script.js"></script>
 
     </body>
 
