--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
         <label for="bodyType">bodyType:</label>
             <select id="bodyType">
+            <option value=""></option>
             <option value="Mago">Mago</option>
             <option value="Tank">Tank</option>
             <option value="Rogue">Rogue</option>
@@ -29,37 +30,56 @@
             <option value="Controller">Controller</option>
             <option value="Paladino">Paladino</option>
         </select>
-            <input type="button" value="Enviar" id="btnManda" onclick="manda()">
             <input type="button" value="LvlUp" id="LvlUp" onclick="levelUP()">       
 </div>
 <div id="hpBox">
-    <label class="caixaTexto">HP: <input type="number" id="hpAtual" min="0"> 
-  / <label class="caixaTexto"><input type="number" id="hpMaximo" readonly></label>
-</div>  
+    <label class="caixaTexto">HP: <input type="number" value="0" id="hpAtual" min="0" readonly> 
+  / <label class="caixaTexto"><input type="number" value="0" id="hpMaximo" min="0" readonly></label>
+</div>
+    <div >
+        <label class="caixaTexto">Mp: <input type="number" value="0" id="mp" min="0" readonly></label>  
+        / <label class="caixaTexto"><input type="number" value="0" id="mpMax" min="0" readonly></label>
+    </div>
 <div id="stts">
         <div>
-        <label>FOR: <input type="number" id="forca" min="0" value="0" max="99" disabled class="status"></label>
+        <label>FOR: 
+            <input type="number" id="forca" min="0" value="0" max="99" disabled class="status" >
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('forca', 1)" disabled class="status"></label>
         </div>
         <div>
-        <label>DEX: <input type="number" id="destreza" min="0" value="0" max="99" disabled class="status"></label>
+        <label>DEX: 
+            <input type="number" id="destreza" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('destreza', 1)" disabled class="status"></label>
         </div>
         <div>
-        <label>AGI: <input type="number" id="agilidade" min="0" value="0" max="99" disabled class="status"></label> 
+        <label>AGI: 
+            <input type="number" id="agilidade" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('agilidade', 1)" disabled class="status"></label> 
         </div>
         <div>
-        <label>STA: <input type="number" id="stamina" min="0" value="0" max="99" disabled class="status"></label>
+        <label>STA: 
+            <input type="number" id="stamina" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaSta('stamina', 1)" disabled class="status"></label>
         </div>
         <div>
-        <label>INT: <input type="number" id="inteligencia" min="0" value="0" max="99" disabled class="status"></label>
+        <label>INT: 
+            <input type="number" id="inteligencia" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('inteligencia', 1)" disabled class="status"></label>
         </div>
         <div>
-        <label>SAB: <input type="number" id="sabedoria" min="0" value="0" max="99" disabled class="status"></label>
+        <label>SAB: 
+            <input type="number" id="sabedoria" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('sabedoria', 1)" disabled class="status"></label>
         </div>
         <div>
-        <label>CAR: <input type="number" id="carisma" min="0" value="0" max="99" disabled class="status"></label>
+        <label>CAR: 
+            <input type="number" id="carisma" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('carisma', 1)" disabled class="status"></label>
         </div>
         <div>
-        <label>CON: <input type="number" id="constituicao" min="0" value="0" max="99" disabled class="status"></label>
+        <label>CON: 
+            <input type="number" id="constituicao" min="0" value="0" max="99" class="status" readonly></label>
+            <input type="button" value="+" id="bottomStatus" onclick="atualizaCon('constituicao', 1)" disabled class="status"></label>
         </div>
 </div>
         <div>
