--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div>
         <label>CON: 
-            <input type="number" id="constituicao" min="0" value="0" max="99" class="status" readonly></label>
+            <input type="number" id="constituicao" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaCon('constituicao', 1)" disabled class="status"></label>
         </div>
 </div>
