--- a/index.html
+++ b/index.html
@@ -43,42 +43,42 @@
 <div id="stts">
         <div>
         <label>FOR: 
-            <input type="number" id="forca" min="0" value="0" max="99" disabled class="status" >
+            <input type="number" id="forca" min="0" value="0" max="99" disabled class="status" readonly>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('forca', 1)" disabled class="status"></label>
         </div>
         <div>
         <label>DEX: 
-            <input type="number" id="destreza" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="number" id="destreza" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('destreza', 1)" disabled class="status"></label>
         </div>
         <div>
         <label>AGI: 
-            <input type="number" id="agilidade" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="number" id="agilidade" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('agilidade', 1)" disabled class="status"></label> 
         </div>
         <div>
         <label>STA: 
-            <input type="number" id="stamina" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="number" id="stamina" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaSta('stamina', 1)" disabled class="status"></label>
         </div>
         <div>
         <label>INT: 
-            <input type="number" id="inteligencia" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="number" id="inteligencia" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('inteligencia', 1)" disabled class="status"></label>
         </div>
         <div>
         <label>SAB: 
-            <input type="number" id="sabedoria" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="number" id="sabedoria" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('sabedoria', 1)" disabled class="status"></label>
         </div>
         <div>
         <label>CAR: 
-            <input type="number" id="carisma" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="number" id="carisma" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaInput('carisma', 1)" disabled class="status"></label>
         </div>
         <div>
         <label>CON: 
-            <input type="number" id="constituicao" min="0" value="0" max="99" disabled class="status"></label>
+            <input type="number" id="constituicao" min="0" value="0" max="99" disabled class="status" readonly></label>
             <input type="button" value="+" id="bottomStatus" onclick="atualizaCon('constituicao', 1)" disabled class="status"></label>
         </div>
 </div>
